# fib

./: Cargo.toml  README.md  fib
benches/: fib_bench.rs
docs/: astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs
docs/get_started/: index.html
docs/src/layouts/: Layout.astro
docs/src/pages/: get_started.astro  index.astro
src/: lib.rs  main.rs
