[package]
name = "fib"
version = "0.1.0"
edition = "2024"

[dependencies]
clap={version="4.5.47", features=["derive"]}
ibig="0.3.6"
num-traits="0.2.19"
color-print="0.3.7"
textplots = "0.8.7"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "fib_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1